addressed most issues