@@ -1,5 +1,6 @@
 package com.kirunaexplorer.app.dto.request;
 
+import com.kirunaexplorer.app.exception.FileReadException;
 import com.kirunaexplorer.app.model.Document;
 import com.kirunaexplorer.app.model.DocumentFile;
 import jakarta.validation.constraints.NotNull;
@@ -7,8 +8,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 public record FileUploadRequestDTO(
     @NotNull
@@ -21,15 +20,15 @@ public record FileUploadRequestDTO(
                 String name = originalFilename != null ? originalFilename.substring(0, originalFilename.lastIndexOf('.')) : "";
                 String extension = originalFilename != null ? originalFilename.substring(originalFilename.lastIndexOf('.') + 1) : "";
                 Long size = file.getSize();
-                byte[] content = new byte[0];
+                byte[] content;
                 try {
                     content = file.getBytes();
                 } catch (IOException e) {
-                    e.printStackTrace();
+                    throw new FileReadException("Error reading file content", e);
                 }
 
                 return new DocumentFile(null, document, name, extension, size, content);
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 }
